# QitBit

./: .gitignore  CMakeLists.txt  CMakeLists_.txt  Dockerfile  README.md  bc.cpp  flow.md  main.cpp  test.cpp
include/: SHA256.h  block.h  blockchain.h  q_blockchain.h  qitbit.h  transaction.h  types.h
src/: SHA256.cpp  block.cpp  blockchain.cpp  q_blockchain.cpp  qitbit.cpp  transaction.cpp  types.cpp
